# null

./: .gitignore  CMakeLists.txt  README.md  basic_test.cpp  data.c  data.h  form.c  form.h  input.c  input.h  main.c  tehnopasr1.c  tehnopasr1.h  tests.cpp
.github/workflows/: build.yml
ServerClient/boost_1_79_0/: project-config.jam
ServerClient/boost_1_79_0/stage/lib/: libboost_atomic.so.1.79.0  libboost_container.so.1.79.0  libboost_json.so.1.79.0  libboost_math_c99.so.1.79.0  libboost_math_c99l.so.1.79.0  libboost_math_tr1.so.1.79.0  libboost_math_tr1f.so.1.79.0  libboost_random.so.1.79.0  libboost_regex.so.1.79.0  libboost_stacktrace_basic.so.1.79.0  libboost_timer.so.1.79.0  libboost_unit_test_framework.so.1.79.0  libboost_wserialization.so.1.79.0
ServerClient/client/: client.cpp  client.hpp  main.cpp
ServerClient/server/: server.cpp  server.hpp
boost_1_79_0/bin.v2/: project-cache.jam
boost_1_79_0/stage/lib/: libboost_coroutine.so.1.79.0  libboost_fiber.so.1.79.0  libboost_log.so.1.79.0  libboost_program_options.so.1.79.0  libboost_serialization.so.1.79.0  libboost_stacktrace_backtrace.so.1.79.0  libboost_type_erasure.so.1.79.0
boost_1_79_0/stage/lib/cmake/boost_iostreams-1.79.0/: libboost_iostreams-variant-static.cmake
boost_1_79_0/stage/lib/cmake/boost_log_setup-1.79.0/: libboost_log_setup-variant-static.cmake
boost_1_79_0/stage/lib/cmake/boost_math_c99-1.79.0/: boost_math_c99-config.cmake
boost_1_79_0/stage/lib/cmake/boost_stacktrace_backtrace-1.79.0/: boost_stacktrace_backtrace-config.cmake
client/: client.cpp  client.hpp  main.cpp
hw2_multi-thread/: CMakeLists.txt  file.h  func.c  main.c  readme  tests.cpp
hw2_single-thread/: CMakeLists.txt  file.h  func.c  main.c  tests.cpp
logic/: CMakeLists.txt  game.cpp  game.h  player.cpp  player.h  street.cpp  street.h  tile.cpp  tile.h
report/: CMakeLists.txt  common_report.c  mt_report.c  report.h  st_report.c
server/: main.cpp  server.cpp  server.hpp
test_files/: text
ui/: CMakeLists.txt  data.cpp  main.cpp
ui/abstract/include/: abstractfragment.h  abstractscreensfactory.h
ui/fragments/: CMakeLists.txt
ui/fragments/include/: auctionwindow.h  creatingfragment.h  fragmentnavigator.h  gamefragment.h  gamemap.h  mainfragment.h  mainwindow.h  multiplayerfragment.h  optionsfragment.h  screensfactory.h  waitingfragment.h
ui/fragments/logic/: game.cpp  game.h  player.cpp  street.cpp  street.h  tile.cpp  tile.h
ui/fragments/src/: creatingfragment.cpp  fragmentnavigator.cpp  gamefragment.cpp  gamemap.cpp  mainfragment.cpp  mainwindow.cpp  screensfactory.cpp  waitingfragment.cpp
(+27 files in other folders)
